src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/Application_Log_Setting__mdt.object-meta.xml
<CustomObject>
    <description
    >Custom metadata to configure settings for sending application logs to defined slack channels.</description>
    <label>Application Log Setting</label>
    <pluralLabel>Application Log Settings</pluralLabel>
</CustomObject>