src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/fields/Application_Domain__c.field-meta.xml
<CustomField>
    <fullName>Application_Domain__c</fullName>
    <description>Defines which part of the application that &quot;owns&quot; the log setting</description>
    <label>Application Domain</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NKS</fullName>
                <default>true</default>
                <label>NKS</label>
            </value>
            <value>
                <fullName>HOT</fullName>
            </value>
            <value>
                <fullName>POAB</fullName>
            </value>
            <value>
                <fullName>AAREG</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>