src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description
    >Required category to match for logs to be published to slack. Leave blank to only use minimum log level and application domain as criteria.</description>
    <inlineHelpText
    >Required category to match for logs to be published to slack. Leave blank to only use minimum log level and application domain as criteria.</inlineHelpText>
    <label>Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>