src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/fields/Immediate_Post__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Determines if the message should be posted immediately after logging, or can be handling in a separate aggregate error report.</description>
    <inlineHelpText
    >Determines if the message should be posted immediately after logging, or can be handling in a separate aggregate error report.</inlineHelpText>
    <label>Immediate Post</label>
    <type>Checkbox</type>
</CustomField>