src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/fields/Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Message_Template__c</fullName>
    <inlineHelpText>Template for the message to be posted to slack.</inlineHelpText>
    <label>Message Template</label>
    <type>TextArea</type>
</CustomField>