src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/fields/Minimum_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Log_Level__c</fullName>
    <description>The minimum log level required for posting a message.</description>
    <inlineHelpText>The minimum log level required for posting a message.</inlineHelpText>
    <label>Minimum Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
                <default>true</default>
                <label>Info</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>