src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Unique name of the named credential to use to inject the Slack Hook.</description>
    <inlineHelpText>Unique name of the named credential to use to inject the Slack Hook.</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>