src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/fields/Slack_Hook__c.field-meta.xml
<CustomField>
    <fullName>Slack_Hook__c</fullName>
    <description>Slack hook the channel where the message should be posted</description>
    <inlineHelpText
    >Slack hook the channel where the message should be posted when running in a production org.</inlineHelpText>
    <label>Slack Hook</label>
    <length>90</length>
    <type>Text</type>
</CustomField>