src/platform-data-model/application-log-setting-custom-metadata/objects/Application_Log_Setting__mdt/fields/Slack_Hook_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Slack_Hook_Sandbox__c</fullName>
    <description>Hook to a slack channel that should be published to when running in a non production org.</description>
    <inlineHelpText
    >Hook to a slack channel that should be published to when running in a non production org. Keep this blank if no publishing should be done from sandbox for this setting.</inlineHelpText>
    <label>Slack Hook Sandbox</label>
    <length>90</length>
    <type>Text</type>
</CustomField>